<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="7dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    android:padding="25dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/food_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <ImageView
                android:id="@+id/recycler_delete"
                android:layout_marginLeft="240dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/food_gram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_gram"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/food_kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_kcal"
            android:textColor="@color/black" />



    </LinearLayout>

</androidx.cardview.widget.CardView>