<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="100dp"
        android:layout_marginHorizontal="38dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/some_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/myhealth"
            android:textColor="@color/colorPrimary"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/some_id_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:textColor="@color/black"
            android:textSize="28dp"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/some_id" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/edittext1"
        app:layout_constraintBottom_toTopOf="@id/edittext1"
        android:text="@string/id"
        android:textSize="15dp"
        android:textColor="@color/black"
        />


    <EditText
        android:id="@+id/edittext1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="49dp"
        android:padding="10dp"
        android:background="@drawable/rectangle_stroke"
        android:hint="@string/id"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first" />

    <TextView
        android:id="@+id/title_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/edittext2"
        app:layout_constraintBottom_toTopOf="@id/edittext2"
        app:layout_constraintTop_toBottomOf="@id/edittext1"
        android:text="@string/pw"
        android:textColor="@color/black"
        android:textSize="15dp"
        />

    <EditText
        android:id="@+id/edittext2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_stroke"
        android:hint="@string/pw"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_pw"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/title_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/edittext2"
        app:layout_constraintTop_toBottomOf="@id/edittext2"
        android:text="@string/nickname"
        android:textColor="@color/black"
        android:textSize="15dp"
        />
    <EditText
        android:id="@+id/edittext3"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_stroke"
        android:hint="@string/nickname"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_nickname"
        android:textColor="@color/black"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_stroke"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext3" />



</androidx.constraintlayout.widget.ConstraintLayout>