<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntakeAddActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:focusable="true"
        android:padding="20dp"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        app:queryHint="검색어를 입력하시오" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/rectangle_list"
        android:elevation="7dp"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@id/search">

        <TextView
            android:id="@+id/summary_bmi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/summary_bmi_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_gram"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/summary_bmi_ave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_kcal"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>